--- a/css/style.scss
+++ b/css/style.scss
@@ -68,6 +68,7 @@ img {
     background-color: white;
     margin: auto;
     border-radius: 10px;
+    box-shadow: -13px 17px 58px -24px black;
 }
 
 main {
